# CopyXross

./: Cargo.toml  README.md  build.rs
src/: main.rs  network.rs
src/app/: macos.rs  mod.rs  windows.rs
src/clipboard/: macos.rs  mod.rs  windows.rs
src/encode/: mod.rs  protocol.rs  transferable.rs
src/network/: macos.rs  mod.rs  windows.rs
src/udp/: mod.rs  protocol.rs  transferable.rs
src/utils/: macos.rs  mod.rs  windows.rs
