[package]
name = "copyxross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "errhandlingapi",
  "shellapi",
  "netioapi",
  "wlanapi"
] }


[dependencies]
local-ip-address = "0.6.3"
dirs-next = "2.0.0"
